# ir_project

./: .gitignore  EVALUATION_REPORT.md  README.md  main.py  plot_result.py  pyproject.toml  structural_eval_results.json  structural_evaluation.py
data/: README.md  id_mapping.json  match_ml25m.ipynb
evaluation/: evaluation.py  evaluation_genome.py  evaluation_lightgcn.py  evaluation_structure.py  evaluation_user_overlap.py
preprocessing/: __init__.py  parser.py  scraper.py  tfidf.py
src/: __init__.py  bert_similarity.py  evaluator.py  features.py  lightgcn.py  precomputed_retrieval.py  retrieval.py  similarity.py  structural_evaluator.py  tfidf_similarity.py
